style.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;700&display=swap");

* {
    font-family: 'Montserrat', sans-serif;
    box-sizing: border-box;
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
}

.wrap {
    display: block;
    width: 50%;
}

.wrap-input {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: .5rem;
    height: 3rem;
}

.input {
    background-color: #fff;
    border: 1px solid #011627;
    border-radius: 5px;
    color: #011627;
    text-align: center;
    width: 100%;
    height: 100%;
}

.add {
    background-color: #fff;
    border: 1px solid #06a77d;
    border-radius: 5px;
    color: #06a77d;
    width: 100%;
    height: 100%;
}

.add:hover {
    background-color: #06a77d;
    color: #fff;
}

.sub {
    background-color: #fff;
    border: 1px solid #ff0022;
    border-radius: 5px;
    color: #ff0022;
    width: 100%;
    height: 100%;
}

.sub:hover {
    background-color: #ff0022;
    color: #fff;
}

#displayArray {
    box-shadow: 0 0 10px #01162720, 0 0 10px #01162720;
    border-radius: 5px;
    padding: 1rem;
    text-align: justify;
    min-height: 3rem;
    max-height: 10rem;
    overflow: auto;
}

@media (min-width: 1920px) {
    .wrap {
        width: 33%;
    }
}

@media (max-width: 768px) {
    .wrap {
        width: 100%;
    }
}

